export const compactToolTabs = [
  {
    name: 'index',
    href: '/',
    label: 'Tuner',
    sf: 'tuningfork',
    md: 'music_note',
  },
  {
    name: 'metronome',
    href: '/metronome',
    label: 'Metronome',
    sf: 'metronome',
    md: 'timer',
  },
] as const;
