appId: com.marginallybetterapps.musictools
---
- launchApp:
    clearState: true
- repeat:
    times: 3
    while:
      notVisible: "Start metronome"
    commands:
      - tapOn:
          text: "Metronome"
          retryTapIfNoChange: true
- assertVisible: "Tempo, 120 BPM"
- assertVisible: "Start metronome"
- startRecording: metronome
- tapOn: "Start metronome"
- assertVisible: "Stop metronome"
- tapOn:
    text: "Tap tempo"
    repeat: 4
    delay: 690
- waitForAnimationToEnd:
    timeout: 1000
- assertNotVisible: "Tempo, 120 BPM"
- assertVisible: "Stop metronome"
- tapOn: "Stop metronome"
- assertVisible: "Start metronome"
- stopRecording
