appId: com.marginallybetterapps.musictools
---
- launchApp:
    clearState: true
- tapOn:
    text: Allow
    optional: true
- tapOn: Metronome
- assertVisible: '4/4 time'
- tapOn: 'Custom time'
- assertVisible: 'Time Signature'
- assertVisible: 'Beats per measure'
- assertVisible: 'Note type'
- repeat:
    times: 4
    commands:
      - swipe:
          from:
            text: 'Beats per measure'
          direction: UP
          duration: 600
      - swipe:
          from:
            text: 'Note type'
          direction: UP
          duration: 600
- tapOn: Done
- assertVisible: 'Custom time, 32/32'
- tapOn: Start metronome
- assertVisible: Stop metronome
- tapOn: Stop metronome
