appId: com.marginallybetterapps.musictools
---
- launchApp:
    clearState: true
- repeat:
    times: 3
    while:
      notVisible: "Start metronome"
    commands:
      - tapOn:
          text: "Metronome"
          retryTapIfNoChange: true
- assertVisible: "Tempo, 120 BPM"
- assertVisible: "4/4 time"
- assertVisible:
    text: "Quarter click rhythm"
    selected: true
- assertVisible: "Time signature"
- assertVisible: "Tap tempo"
- startRecording: time-signature
- swipe:
    from:
      text: "Tempo, 120 BPM"
    direction: RIGHT
    duration: 650
- assertNotVisible: "Tempo, 120 BPM"
- tapOn: "3/4 time"
- assertVisible:
    text: "3/4 time"
    selected: true
- tapOn: "6/8 time"
- assertVisible:
    text: "6/8 time"
    selected: true
- tapOn: "Custom time"
- assertVisible: "Beats per measure"
- assertVisible: "Note type"
- tapOn: Done
- assertVisible:
    text: "6/8 time"
    selected: true
- assertVisible:
    text: "Quarter click rhythm"
    selected: true
- tapOn: "Start metronome"
- assertVisible: "Stop metronome"
- assertVisible: "Metronome beat"
- tapOn: "Stop metronome"
- assertVisible: "Start metronome"
- stopRecording
