appId: com.marginallybetterapps.musictools
---
- launchApp
- tapOn:
    text: Allow
    optional: true
- tapOn: Tuner
- assertVisible:
    id: tuner-horizon
- startRecording: smoke
- tapOn: Metronome
- assertVisible: Start metronome
- tapOn: Start metronome
- assertVisible: Stop metronome
- tapOn: Stop metronome
- tapOn: Tuner
- assertVisible:
    id: tuner-horizon
- stopRecording
